syntax = "proto3";

package rsca.api;
option go_package = "github.com/na4ma4/rsca/api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
// import "google/api/annotations.proto";
// import "api/common.proto";

message Empty {}

message TriggerAllResponse {
    repeated string names = 1;
}

message Envelope {
    Member sender = 10;
    Members recipient = 11;
}

message Members {
    repeated string id = 10;
    repeated string name = 11;
    repeated string capability = 12;
    repeated string tag = 13;
    repeated string service = 14;
}

message Member {
    string id = 1;
    string internal_id = 2;
    string name = 10;
    repeated string capability = 11;
    repeated string tag = 12;
    repeated string service = 13;

    string version = 90;
    string git_hash = 91;
    string build_date = 92;

    google.protobuf.Timestamp last_seen = 100;
    google.protobuf.Duration ping_latency = 102;

    // Only used in rendering host lists, not transferred over the wire.
    string last_seen_ago = 1001;
    string latency = 1003;
}

// message Recipient {
//     repeated string id = 10;
//     repeated string name = 11;
//     repeated string capability = 12;
//     repeated string tag = 13;
//     repeated string service = 14;
// }

message Message {
    Envelope envelope = 1;
    oneof message {
        RegisterMessage register_message = 100;
        PingMessage ping_message = 101;
        PongMessage pong_message = 102;
        EventMessage event_message = 103;
        UpdateAllMessage update_all_message = 104;
    }
}

message RegisterMessage {
    Member member = 1;
}

message PingMessage {
    string id = 1;
    string stream_id = 2;
    google.protobuf.Timestamp ts = 4;
}

message PongMessage {
    string id = 1;
    string stream_id = 2;
    google.protobuf.Timestamp ts = 4;
}

message UpdateAllMessage {
    string id = 1;
}

enum Status {
    OK = 0;
    WARNING = 1;
    CRITICAL = 2;
    UNKNOWN = 3;
}

enum CheckType {
    HOST = 0;
    SERVICE = 1;
}

message EventMessage {
    string hostname = 1;
    CheckType type = 2;
    string check = 3;
    Status status = 4;
    string output = 5;
    string output_error = 10;
    string perfdata = 6;
    google.protobuf.Timestamp request_timestamp = 7;
    int32 retries = 8;
    string id = 9;
}
